DDD News						-*- text -*-
********

DDD 3.2 [in development]
========================

DDD 3.2 brings almost nothing yet.

- In Breakpoint Properties, Define Command, and GDB Settings, have an
  `Apply' button that applies changes to text fields.
- The GDB source directory path is saved with the current session.

DDD 3.2 also incorporates all changes from DDD 3.1.1 and later; see
below.


DDD 3.1.2
=========

DDD 3.1.2 fixes more minor bugs in DDD 3.1:

- The splash screen works with C++ compilers other than GCC.
- Under certain circumstances, show/hide can fail with deeply nested
  structures.

There are no new features in DDD 3.1.2, so unless you suffer from one
of the bugs listed above, feel free to upgrade at some later time.


DDD 3.1.1
=========

DDD 3.1.1 fixes a number of minor bugs in DDD 3.1:

- EGCS 1.1 on Linux properly compiles DDD.
- ostrstream::pcount() is no longer considered `broken' when using
  `gcc' (instead of `c++' or `g++') as C++ compiler.
- Empty status displays are handled properly.
- Using Perl 5.005 and later, multiple breakpoints are properly recognized.
- Using DBX, incomplete DBX output is properly handled, such as
  prompts of the debugged program.  For details, see the new
  `positionTimeout' and `displayTimeout' resources.
- DDD no longer hangs searching for a Java class.
- Using a remote GDB, only one execution window is launched.
- Using DBX and the execution window, Program->Run Again and the `run'
  command tool button no longer clear all arguments.

There are no new features in DDD 3.1.1, so unless you suffer from one
of the bugs listed above, feel free to upgrade at some later time.


DDD 3.1
=======

DDD 3.1 brings Perl support, Python support, data plotting, Undo/Redo,
and advanced data exploration.


Debuggers and Languages
-----------------------

- Perl support.  DDD supports debugging Perl programs, using the Perl
  debugger.  Requires Perl 5.003 or later.
